--- a/Image/templates/Image/result.html
+++ b/Image/templates/Image/result.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>عکس ایجاد شده</title>
+    <title>Image created</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         .image-box {
@@ -33,9 +33,9 @@
 <body>
     <div class="container mt-4">
         <div class="row justify-content-center">
-            <h1 class="mb-4">عکس ایجاد شده:</h1>
+            <h1 class="mb-4">Photo created</h1>
             <div class="col-md-8 image-box">
-                <img src="{{ image_url }}" alt="تصویر ایجاد شده" class="img-fluid">
+                <img src="{{ image_url }}" alt="Image created" class="img-fluid">
             </div>
         </div>
     </div>
